--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-14  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2005-06-12  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Update Norwegian bokmål translation.
