Add icons for path menu. Patch from Vincent Noel <vincent.noel@gmail.com>
2005-06-15  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-spatial-window.c:
	Add icons for path menu.
	Patch from Vincent Noel <vincent.noel@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-15  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-spatial-window.c:
+	Add icons for path menu.
+	Patch from Vincent Noel <vincent.noel@gmail.com>
+
 2005-06-11  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c:
