No dnd shadow on the desktop. Redraw less to get rid of the dnd shadow.
2005-06-15  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-dnd.c:
	No dnd shadow on the desktop.
	Redraw less to get rid of the dnd shadow.

	Patch from Matthias Clasen (#307803)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-06-15  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-dnd.c:
+	No dnd shadow on the desktop.
+	Redraw less to get rid of the dnd shadow.
+	
+	Patch from Matthias Clasen (#307803)
+
+2005-06-15  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-tree-view-drag-dest.c:
 	Add hover expansion
 	
