--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-16  Anders Carlsson  <andersca@imendio.com>
 
+	* src/nautilus-navigation-window-menus.c 
+	(append_dynamic_bookmarks): Unref the action group here too.
+
+2005-06-16  Anders Carlsson  <andersca@imendio.com>
+
 	* src/nautilus-navigation-window-menus.c: (refresh_go_menu):
 	Unref the action group after inserting it. This makes
 	a NautilusFile memory leak go away.
