--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-16  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file.c (nautilus_file_get_display_name_collation_key):
+	Conditionally use g_utf8_collate_key_for_filename for glib >= 2.7.0
+
+2005-06-16  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-tree-view-drag-dest.c:
 	Slightly slower auto hover expand.
 	
