Remove subdirectories when destroying the view.
2005-06-16  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-directory-view.c:
	(fm_directory_view_destroy):
	Remove subdirectories when destroying the view.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-16  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-directory-view.c:
+	(fm_directory_view_destroy):
+	Remove subdirectories when destroying the view.
+
 2005-06-16  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file.c (nautilus_file_get_display_name_collation_key):
