--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-17  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-06-12  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
