--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-17  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-model.c: (fm_list_model_remove):
+	Fix iter stamp handling.
+
+2005-06-17  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-list-view.c: (button_press_callback):
 	Allow selection of the dummy node. Otherwise things
 	got all strange: You could still select it using ranges, and
