Small delay before turning Loading... into (Empty) to avoid flicker.
2005-06-17  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-model.c:
	Small delay before turning Loading... into (Empty) to
	avoid flicker.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-06-17  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-model.c:
+	Small delay before turning Loading... into (Empty) to
+	avoid flicker.
+
+2005-06-17  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-list-model.c: (fm_list_model_remove):
 	Fix iter stamp handling.
 
