--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-19  Anders Carlsson  <andersca@imendio.com>
+
+	* src/nautilus-throbber.c (nautilus_throbber_finalize): 
+	Free throbber->details after we're done using it.
+	
 2005-06-17  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-list-model.c:
