--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-20  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Added fm-list-model.c
+
 2005-06-17  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
