--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-20  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c: (paste_clipboard_data):
+	* src/file-manager/fm-tree-view.c: (paste_clipboard_data):
+	Fix uninitialized variable warning.
+
 2005-06-20  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-directory-async.c:
