--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-20  Anders Carlsson  <andersca@imendio.com>
+
+	* src/file-manager/fm-directory-view.c (process_old_files): 
+	Plug leak by freeing the sorted list instead.
+
 2005-06-20  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c: (paste_clipboard_data):
