Better font sizes for zooming. (#160080)
2005-06-20  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	Better font sizes for zooming. (#160080)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-20  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-container.c:
+	Better font sizes for zooming. (#160080)
+
 2005-06-20  Anders Carlsson  <andersca@imendio.com>
 
 	* src/file-manager/fm-directory-view.c (process_old_files): 
