Fix ctrl-unselect in single click mode (#145331)
2005-06-20  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c (fm_list_view_did_not_drag):
	Fix ctrl-unselect in single click mode (#145331)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-20  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-view.c (fm_list_view_did_not_drag):
+	Fix ctrl-unselect in single click mode (#145331)
+
+2005-06-20  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	Better font sizes for zooming. (#160080)
 
