--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-06-20  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-navigation-window-menus.c: 
+	* src/nautilus-window-menus.c:
+	* src/nautilus-window-private.h:
+	Make bookmark menu item action names unique. (#161859)
+
+2005-06-20  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-list-view.c (fm_list_view_did_not_drag):
 	Fix ctrl-unselect in single click mode (#145331)
 
