Plug a couple leaks. Closes
2005-06-20  Kjartan Maraas  <kmaraas@gnome.org>

	* src/file-manager/fm-directory-view.c: (reset_open_with_menu),
	(real_update_menus_volumes): Plug a couple leaks. Closes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-20  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* src/file-manager/fm-directory-view.c: (reset_open_with_menu),
+	(real_update_menus_volumes): Plug a couple leaks. Closes
+	bug #307267
+
 2005-06-20  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-navigation-window-menus.c: 
