Updated Serbian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-22  Danilo Å egan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2005-06-21  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by  Sven Sapelson.
@@ -84,7 +88,6 @@
 
 	* nl.po: Translation updated by Reinout van Schouwen.
 
->>>>>>> 1.2088.2.38
 2005-05-23  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Hungarian translation updated.
@@ -160,7 +163,7 @@
 
 	* hu.po: Hungarian translation updated.
 
-2005-04-14  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+2005-04-14  Iaki Larraaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
 
