--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-22  Abel Cheung  <maddog@linuxhall.org>
+
+	* zh_TW.po: Fix language team reference.
+
 2005-06-22  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
