Adapt to recent nautilus clipboard API changes.
2005-06-23  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-notes-viewer.c:
	(nautilus_notes_viewer_set_parent_window):
	Adapt to recent nautilus clipboard API changes.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-06-23  Christian Neumair  <chris@gnome-de.org>
 
+	* src/nautilus-notes-viewer.c:
+	(nautilus_notes_viewer_set_parent_window):
+	Adapt to recent nautilus clipboard API changes.
+
+2005-06-23  Christian Neumair  <chris@gnome-de.org>
+
 	* libnautilus-private/nautilus-clipboard.c:
 	(editable_connect_callbacks), (editable_disconnect_callbacks),
 	(text_buffer_update_sensitivity), (text_buffer_delete_range),
