Updated Norwegian translation. Same
2005-06-24  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Updated Norwegian translation.
	* no.po: Same

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-24  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian translation.
+	* no.po: Same
+
 2005-06-22  Abel Cheung  <maddog@linuxhall.org>
 
 	* zh_TW.po: Fix language team reference.
