--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-27  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Add new files.
+
 2005-06-26  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
