--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2005-06-28  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-sidebar.[ch]:
+	Add get_tab_tooltop method.
+	
+	* src/nautilus-navigation-window.c:
+	* src/nautilus-side-pane.[ch]:
+	Use get_tab_tooltip.
+	
+	* src/nautilus-emblem-sidebar.c:
+	* src/nautilus-history-sidebar.c:
+	* src/nautilus-information-panel.c:
+	* src/nautilus-notes-viewer.c:
+	Implement get_tab_toolkit.
+
+	Fixes bug #100268, patch from Michael Terry <mike@mterry.name>
+
 2005-06-23  Christian Neumair  <chris@gnome-de.org>
 
 	* src/nautilus-notes-viewer.c:
