Updated Simplified Chinese translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2005-07-01  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2005-06-30  Terance Sola  <terance@lyse.net>
 
-	* nb.po: Updated Norwegian bokmål translation.
+	* nb.po: Updated Norwegian bokml translation.
 	* no.po: Same.
 
 2005-06-27  Priit Laes  <plaes@cvs.gnome.org>
@@ -52,7 +56,7 @@
 
 2005-06-12  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* nb.po: Update Norwegian bokmål translation.
+	* nb.po: Update Norwegian bokml translation.
 	* no.po: Same
 
 2005-06-12  Priit Laes  <plaes@cvs.gnome.org>
@@ -97,7 +101,7 @@
 
 2005-06-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
-	* gl.po: Updated Galician translation from Jesús Bravo Álvarez.
+	* gl.po: Updated Galician translation from Jess Bravo lvarez.
 
 2005-06-07  Funda Wang  <fundawang@linux.net.cn>
 
