Better strings for browser tooltips. Patch from Luca Ferretti
2005-07-01  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c:
	Better strings for browser tooltips.
	Patch from Luca Ferretti <elle.uca@libero.it>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-01  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c:
+	Better strings for browser tooltips.
+	Patch from Luca Ferretti <elle.uca@libero.it>
+	
 2005-06-03  Dinoop Thomas <dinoop.thomas@wipro.com>
 	
 	* libnautilus-private/nautilus-file-operations.c:
