Add icon for empty file in create menu.
2005-07-01  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.c:
	Add icon for empty file in create menu.

	Patch from Christian Neumair  <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-07-01  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-actions.h:
+	* src/file-manager/fm-directory-view.c:
+	Add icon for empty file in create menu.
+
+	Patch from Christian Neumair  <chris@gnome-de.org>
+
+2005-07-01  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-directory-view.c:
 	Better strings for browser tooltips.
 	Patch from Luca Ferretti <elle.uca@libero.it>
